
0.5.0
    Creation of a distutils-like function to find the include and libs directories in almost any installation
    Now passes builds on Travis
    Cyther is now in beta version
    Took out auto-deployment
    Changed the where and which function to be the crawl and where functions, respectively

0.5.1
    Fixed many of the unordered badges
    Updated the operating system finder to be safer
    Fixed the hardcoding of the python environment structure to not be primary

0.5.2
    Transferred the include_string and runtime_string to be partially defined outside the function

0.5.3
    Added auto deployment
    Added and implemented the run function, to extract code from a file and automatically run it

0.6.1
    Gave travis a secure password in the yaml file
    Fixed a few bugs with the run() function
    Added a readme generator system to have the readme.md and readme.rst
    Changed the '-t' option to '-s'
    Added --execute and --timer to the commandline argument system
    Made timer and execute be '-t', and '-x' respectively
    Did some README updates
    Added to the testing script significantly, and got travis to run that AND nosetests
    Properly encapsulated the 'cytherize' and 'core' functions
    Added the -X and -T options, meant for super powerful debugging and building
    Gave the option to print the commands passed off only if wanted to
    Formatted the '-h' text to be even more helpful!
    Deleted the current useless documentation, adding new docs soon
    Did some serious encapsulation and reorganization of entire compilation system
    Fixed the error management system to make sure it is reliable
    All communications from cyther to the user are located in a single place, and done through stdout

0.6.2
    Changed a few distribution settings
    Fixed an encoding bug
    Deleted the test_cyther null command in the travis yaml

0.6.3
    Took README.md out of the .gitignore
    Fixed the distribution settings